<resources>
    <string name="app_name">PenPi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_name">个人主页</string>
    <string name="record_name">我的记录</string>
    <string name="community_name">社区</string>
    <string name="config_name">设置</string>
    <string name="outlogin_name">退出登录</string>
    <string name="chat_name">聊天</string>
    <string name="more_name">更多</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="record_listern">打开听单模式</string>
    <string name="record_nolistern">关闭听单模式</string>

    <string name="user_login">登录</string>
    <string name="user_login_name">账号</string>
    <string name="user_login_pwd">密码</string>
    <string name="user_login_name_hint">请输入账号</string>
    <string name="user_login_pwd_hint">请输入密码</string>
    <string name="user_login_zc">注册</string>
    <string name="user_login_remember">记住密码</string>
    <string name="user_login_other">——第三方登录——</string>
    <string name="user_login_qq">QQ登录</string>
    <string name="user_login_wechat">微信登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_name">手机账号</string>
    <string name="login_pwd">设置密码</string>
    <string name="login_yan">手机验证</string>
    <string name="login_name_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_yan_hint">请输入验证码</string>
    <string name="login_get_yan">获取手机验证码</string>
    <string name="login_statement_1">注册代表你同意</string>
    <string name="login_statement_2">PenPi用户服务协议和隐私条款</string>
    <string name="title_activity_login">Sign in</string>
    <string name="message">消息设置</string>
</resources>
