<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="0.13"
            android:layout_height="110dp">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.21"
                android:text="@string/login_name" />

            <EditText
                android:textColorHint="#CCCCCC"
                android:id="@+id/register_input_phone_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.01"
                android:background="@null"
                android:ems="10"
                android:hint="@string/login_name_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_xian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/login_yan" />

            <EditText
                android:textColorHint="#CCCCCC"
                android:id="@+id/register_input_code_et"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@null"
                android:ems="10"
                android:hint="@string/login_yan_hint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/register_request_code_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="#30000000"
                android:text="@string/login_get_yan"
                android:textSize="10dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_xian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.20"
                android:text="@string/login_pwd" />

            <EditText
                android:id="@+id/passward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.02"
                android:background="@null"
                android:ems="10"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:textColorHint="#CCCCCC" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_xian" />

        <Button
            android:id="@+id/register_commit_btn"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="20dp"
            android:text="注册"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="111dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/login_statement_1" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="38dp"
                android:text="@string/login_statement_2" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>