<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@drawable/login_background"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/Rlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/userlogin_out_button_selector" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.06"
                android:text="@string/user_login_name"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@null"
                android:hint="@string/user_login_name_hint"
                android:inputType="textPersonName"
                android:textColorHint="#CCCCCC"
                android:textSize="20dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/login_xian" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.20"
                android:text="@string/user_login_pwd"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1.02"
                android:background="@null"
                android:ems="10"
                android:hint="@string/user_login_pwd_hint"
                android:inputType="textPassword"
                android:textColorHint="#CCCCCC"
                android:textSize="20dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_xian" />

        <Button
            android:id="@+id/imglogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/userlogin_login_button_selector"
            android:text="@string/user_login"
            android:textColor="#666666"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/userlogin_otherlogin_button_selector"
                android:text="@string/user_login_yzm"
                android:textColor="#666666"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="183dp"
                android:layout_marginRight="183dp"
                android:layout_toLeftOf="@+id/button6"
                android:layout_toStartOf="@+id/button6"
                android:background="@drawable/userlogin_otherlogin_button_selector"
                android:paddingLeft="0dp"
                android:text="@string/user_login_zc"
                android:textColor="#666666"
                android:textSize="20dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:id="@+id/gird1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/linearLayout3"
                android:layout_marginTop="200dp"
                android:horizontalSpacing="5dp"
                android:numColumns="3" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
